# devutils_rs

./: .gitignore  100_PERCENT_COMPLETE.md  AGENTS.md  BEST_IN_WORLD_ANALYSIS.md  COMPARISON.md  COMPLETION_REPORT.md  Cargo.toml  Dockerfile  ENTERPRISE_DELIVERED.md  FEATURE_COMPARISON.md  FINAL_PLUGIN_REPORT.md  FINAL_STATUS.md  GITHUB_AUTOMATION.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  LICENSE  PLUGINS_100_COMPLETE.md  PLUGIN_COVERAGE_REPORT.md  PLUGIN_STATUS.md  README.md  RELEASE.md  STATUS.md  demo_github.sh  demo_script.md  test_recording.json
.devutils/: agent_state.json
.github/: README.md
.github/workflows/: ci.yml  devutils.yml
benches/: search_bench.rs  utils_bench.rs
shell/: _devutils  devutils.fish  install.sh
src/: advanced.rs  agent.rs  agent_state.rs  ai.rs  all_utils.rs  atomic_edit.rs  auth.rs  browser.rs  chat.rs  checkpoints.rs  ci_bridge.rs  cli_types.rs  commands.rs  completions.rs  context.rs  corrections.rs  cron.rs  daemon.rs  debugger.rs  dev_loop.rs  diff_view.rs  docker.rs  error.rs  fast_render.rs  git.rs  git_ai.rs  git_session.rs  git_ui.rs  github.rs  history.rs  hooks.rs  incident.rs  inline_edit.rs  integrations.rs  intent.rs  lib.rs  live_reload.rs  local_models.rs  lsp.rs  main.rs  (+45 more)
src/config/: mod.rs
src/enterprise/: audit.rs  config.rs  mod.rs  sso.rs  team.rs
src/intelligence/: hunter.rs  memory_graph.rs  mod.rs  shadow.rs
src/marketplace/: mod.rs
src/plugins/: all_plugins.rs  ci_cd.rs  mod.rs
src/test_runner/: mod.rs
tests/: industrial_tests.rs  integration_test.rs
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.js  extension.ts
