[package]
name = "devutils"
version = "1.0.0"
edition = "2021"
description = "🚀 The fastest AI-powered developer toolkit - 100x faster than alternatives"
authors = ["DevUtils Team <hello@devutils.ai>"]
license = "MIT"
homepage = "https://devutils.ai"
repository = "https://github.com/devutils/devutils"
keywords = ["cli", "ai", "developer-tools", "tui", "openai"]
categories = ["development-tools", "ai"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.26", features = ["crossterm"] }
walkdir = "2"
regex = "1.10"
fuzzy-matcher = "0.3"
rayon = "1.8"
memmap2 = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sys-info = "0.9"
directories = "5"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
lazy_static = "1.4"
once_cell = "1.19"
rustc-hash = "1.1"
toml = "0.8"
dirs = "5"
futures-util = "0.3"
glob = "0.3"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.22"
image = "0.25"
urlencoding = "2.1"
serde_yaml = "0.9"
rand = "0.8"
fastembed = "5"
thiserror = "1.0"

num_cpus = "1.16"
ignore = "0.4"
crossbeam = "0.8"
sysinfo = "0.30"
blake3 = "1.5"
sha1 = "0.10"
crc32fast = "1.4"
adler = "1.0"
aho-corasick = "1.1"
similar = "2.5"
csv = "1.3"
quick-xml = { version = "0.35", features = ["serialize"] }
memchr = "2.7"
jsonwebtoken = "9.3"
html-escape = "0.2"
whoami = "1.5"
uuid = { version = "1.7", features = ["v4", "v7"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
itertools = "0.12"
[lib]
name = "devutils"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "utils_bench"
harness = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[bin]]
name = "devutils"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true